syntax = "proto3";

package savassan.khaydarin.v1;

import "google/protobuf/struct.proto";

service KhaydarinService {
    // 원시 사용자 프롬프트를 받아 구조화된 파인튜닝 계획을 반환합니다.
    rpc ProcessPrompt(ProcessPromptRequest) returns (ProcessPromptResponse);
}

message ProcessPromptRequest {
    string request_id = 1;  // 멱등성 및 추적용
    string user_id = 2;
    string user_prompt = 3;
}

message ProcessPromptResponse {
    // 파인튜닝 계획의 구조화된 표현.
    google.protobuf.Struct structured_plan = 1;
}

// structured_plan이 포함할 수 있는 내용의 예:
// {
//   "base_model": "StableDiffusion-v1.5",
//   "tuning_type": "LoRA",
//   "subject_description": "사용자의 개 Fluffy",
//   "style_description": "수채화 그림",
//   "hyperparameters": {
//     "learning_rate": "1e-4",
//     "lora_rank": 8
//   }
// }